# bridge_graphical_models

./: README.md  fashion-mnist.ipynb  fieldline-notebook.ipynb  generative-bridge-model-piority-1.ipynb  proxy-gap-2x2.ipynb
bridge-graphical-models_real/: CITATION.cff  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
bridge-graphical-models_real/benchmarks/: README.md  lfw_benchmark_summary.csv  results_lfw.md
bridge-graphical-models_real/configs/: cifar10.yaml  digits.yaml  fashionmnist.yaml  lfw.yaml  mnist.yaml
bridge-graphical-models_real/docs/: zhihu_post.md
bridge-graphical-models_real/examples/: field_line_demo.py
bridge-graphical-models_real/paper/: README.md  checklist.tex  main.bbl  main.tex  neurips_2026.sty  references.bib
bridge-graphical-models_real/paper/figures/: realdata_lfw_benchmark_results.csv  toy_gap_knn_sensitivity.csv  toy_gap_replicates.csv  toy_projection_gap.csv
bridge-graphical-models_real/paper/scripts/: run_realdata_benchmark.py  run_realdata_gap.py  toy_projection_gap_replicates.py
bridge-graphical-models_real/scripts/: run_toy_projection_gap.py
bridge-graphical-models_real/src/psvb/: __init__.py  bridges.py  couplings.py  gap.py  latent_training.py  linear_training.py  metrics.py  plotting.py  poisson.py  realdata.py  torch_models.py
bridge-graphical-models_real/tests/: test_couplings.py  test_fields.py  test_realdata.py
paper/: readme.md
path-space-variational-bridges/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
path-space-variational-bridges/.github/workflows/: paper.yml  python-tests.yml
path-space-variational-bridges/docs/: NOTES.md
path-space-variational-bridges/examples/: demo_import.py
path-space-variational-bridges/paper/: README.md  main.bbl  main.tex  references.bib
path-space-variational-bridges/paper/figures/: toy_projection_gap.csv
path-space-variational-bridges/scripts/: compile_paper.sh
path-space-variational-bridges/src/psvb/: __init__.py  distributions.py  gap.py
path-space-variational-bridges/tests/: test_core.py  test_gap.py
(+1 files in other folders)
